[gd_scene load_steps=7 format=3 uid="uid://cmfldv5flfnr8"]

[ext_resource type="Script" uid="uid://ujrf2tcl0vrp" path="res://scripts/rin.gd" id="1_460ro"]
[ext_resource type="Texture2D" uid="uid://di4827m7ueo1q" path="res://images/player.png" id="2_ix5la"]
[ext_resource type="Texture2D" uid="uid://di36wv4xid0kd" path="res://images/circle.png" id="3_2vwj7"]
[ext_resource type="Script" uid="uid://c2ld355al4qu2" path="res://scripts/collect_bread.gd" id="4_q5qhq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fy6g3"]
radius = 10.0499

[sub_resource type="CircleShape2D" id="CircleShape2D_4cyov"]
radius = 115.082

[node name="player" type="Area2D"]
script = ExtResource("1_460ro")

[node name="drip" type="Sprite2D" parent="."]
position = Vector2(-3.57144, 0)
scale = Vector2(1.95853, 1.96782)
texture = ExtResource("2_ix5la")

[node name="hitboxes" type="Sprite2D" parent="."]
scale = Vector2(0.65625, 0.65625)
texture = ExtResource("3_2vwj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fy6g3")

[node name="bulletSpawnPoint" type="Node2D" parent="."]
position = Vector2(-63.6365, 0)

[node name="bulletSpawnPoint2" type="Node2D" parent="."]
position = Vector2(65.9092, 0)

[node name="collectBread" type="Area2D" parent="."]
script = ExtResource("4_q5qhq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="collectBread"]
shape = SubResource("CircleShape2D_4cyov")

[node name="invincibility" type="Timer" parent="."]
wait_time = 4.0

[node name="superTimePeriod" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="shootinterval" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="invincibility" to="." method="_on_invincibility_timeout"]
[connection signal="timeout" from="superTimePeriod" to="." method="_on_super_time_period_timeout"]
[connection signal="timeout" from="shootinterval" to="." method="_on_shootinterval_timeout"]
